[package]
name = "minijks"
version = "0.1.0"
edition = "2021"
authors = ["Dmitry Ulyanov <sillent1987@gmail.com>"]
description = "Small library for parsing JKS in old format (not PKCS#12)"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "github.com/sillent/minijks"
keywords = ["JKS", "cryptography", "keystore"]
categories = ["cryptography"]

[dependencies]
x509-certificate = "0.24.0"
